--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -42,7 +42,7 @@ services:
     container_name: promtail
     volumes:
       - ./promtail-config.yaml:/etc/promtail/config.yml
-      - ./node_app/logs:/var/log/node_app
+      # - ./node_app/logs:/var/log/node_app
     command: -config.file=/etc/promtail/config.yml
 
   mysql-db:
